--- a/index.html
+++ b/index.html
@@ -30,62 +30,64 @@
     </section>
     
     <section class="proyectos">
+
+        <div class="row">
+        
         <article class="proyecto">
             <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
             <h3 class="proyecto_titulo">Proyecto 1</h3>
             <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
             <ul class="habilidades">
-                <li class="habilidad">HTML 5</li>
-                <li class="habilidad">CSS 3</li>
-                <li class="habilidad">JS</li>
-                <li class="habilidad">Angular</li>
+                <li class="habilidad--proyecto">HTML 5</li>
+                <li class="habilidad--proyecto">CSS 3</li>
+                <li class="habilidad--proyecto">JS</li>
+                <li class="habilidad--proyecto">Angular</li>
             </ul>
         </article>
-    </section>
-
-
-    <section class="proyectos">
         <article class="proyecto">
             <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
-            <h3 class="proyecto_titulo">Proyecto 1</h3>
+            <h3 class="proyecto_titulo">Proyecto 2</h3>
             <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
             <ul class="habilidades">
-                <li class="habilidad">HTML 5</li>
-                <li class="habilidad">CSS 3</li>
-                <li class="habilidad">JS</li>
-                <li class="habilidad">Angular</li>
+                <li class="habilidad--proyecto">HTML 5</li>
+                <li class="habilidad--proyecto">CSS 3</li>
+                <li class="habilidad--proyecto">JS</li>
+                <li class="habilidad--proyecto">Angular</li>
             </ul>
         </article>
-    </section>
+    </div>
 
+    <div class="row">
+        <article class="proyecto">
+            <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
+            <h3 class="proyecto_titulo">Proyecto 3</h3>
+            <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
+            <ul class="habilidades">
+                <li class="habilidad--proyecto">HTML 5</li>
+                <li class="habilidad--proyecto">CSS 3</li>
+                <li class="habilidad--proyecto">JS</li>
+                <li class="habilidad--proyecto">Angular</li>
+            </ul>
+        </article>
    
-    <section class="proyectos">
+
         <article class="proyecto">
             <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
-            <h3 class="proyecto_titulo">Proyecto 1</h3>
+            <h3 class="proyecto_titulo">Proyecto 4</h3>
             <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
             <ul class="habilidades">
-                <li class="habilidad">HTML 5</li>
-                <li class="habilidad">CSS 3</li>
-                <li class="habilidad">JS</li>
-                <li class="habilidad">Angular</li>
+                <li class="habilidad--proyecto">HTML 5</li>
+                <li class="habilidad--proyecto">CSS 3</li>
+                <li class="habilidad--proyecto">JS</li>
+                <li class="habilidad--proyecto">Angular</li>
             </ul>
         </article>
+    </div>
     </section>
 
 
-    <section class="proyectos">
-        <article class="proyecto">
-            <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
-            <h3 class="proyecto_titulo">Proyecto 1</h3>
-            <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
-            <ul class="habilidades">
-                <li class="habilidad">HTML 5</li>
-                <li class="habilidad">CSS 3</li>
-                <li class="habilidad">JS</li>
-                <li class="habilidad">Angular</li>
-            </ul>
-        </article>
-    </section>
+
+
+  
 </body>
 </html>
