adaptar paginas a los proyectos realizados en el curso de html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                 </section>
                 
-                <iframe class="Principal" src="CuerpoPrincipal.html"></iframe>
+                <iframe class="Principal" src="proyectos/cuerpoPrincipal.html"></iframe>
 
                </div>
 
