--- a/proyectos/invitacion.html
+++ b/proyectos/invitacion.html
@@ -52,7 +52,7 @@
     </head>
     <body>
         
-        <a  href="../cuerpoPrincipal.html">
+        <a   href="../proyectos/cuerpoPrincipal.html">
             Ir Hacia Pagina Principal
        </a>
        <div class="container">
