--- a/proyectos/viajes.html
+++ b/proyectos/viajes.html
@@ -38,7 +38,7 @@
     </head>
     <body>
 
-        <a  href="../cuerpoPrincipal.html">
+        <a  href="../proyectos/cuerpoPrincipal.html">
              Ir Hacia Pagina Principal
         </a>
     
