reparacion de errores

--- a/proyectos/cuerpoPrincipal.html
+++ b/proyectos/cuerpoPrincipal.html
@@ -14,8 +14,8 @@
         <div class="row">
         
         <article class="proyecto">
-            <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
-            <a href="proyectos/viajes.html" class="proyecto_titulo">Proyecto Viajes</a>
+            <img src="../imagenes/imge1.jpg" alt="" class="proyecto_imagen">
+            <a href="../proyectos/viajes.html" class="proyecto_titulo">Proyecto Viajes</a>
             <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
             <ul class="habilidades">
                 <li class="habilidad--proyecto">HTML 5</li>
@@ -25,8 +25,8 @@
             </ul>
         </article>
         <article class="proyecto">
-            <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
-            <a href="proyectos/recetas.html" class="proyecto_titulo">Proyecto Recetas</a>
+            <img src="../imagenes/imge1.jpg" alt="" class="proyecto_imagen">
+            <a href="../proyectos/recetas.html" class="proyecto_titulo">Proyecto Recetas</a>
             <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
             <ul class="habilidades">
                 <li class="habilidad--proyecto">HTML 5</li>
@@ -39,8 +39,8 @@
 
         <div class="row">
         <article class="proyecto">
-            <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
-            <a href="proyectos/blog.html" class="proyecto_titulo">Proyecto Blog</a>
+            <img src="../imagenes/imge1.jpg" alt="" class="proyecto_imagen">
+            <a href="../proyectos/blog.html" class="proyecto_titulo">Proyecto Blog</a>
             <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
             <ul class="habilidades">
                 <li class="habilidad--proyecto">HTML 5</li>
@@ -52,8 +52,8 @@
 
 
         <article class="proyecto">
-            <img src="imagenes/imge1.jpg" alt="" class="proyecto_imagen">
-            <a href="proyectos/invitacion.html" class="proyecto_titulo">Proyecto Invitación</a>
+            <img src="../imagenes/imge1.jpg" alt="" class="proyecto_imagen">
+            <a href="../proyectos/ invitacion.html" class="proyecto_titulo">Proyecto Invitación</a>
             <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
             <ul class="habilidades">
                 <li class="habilidad--proyecto">HTML 5</li>
