--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                 </section>
                 
-                <iframe class="Principal" src="proyectos/cuerpoPrincipal.html"></iframe>
+                <iframe class="Principal" src="cuerpo/cuerpoPrincipal.html"></iframe>
 
                </div>
 
