--- a/proyectos/blog.html
+++ b/proyectos/blog.html
@@ -41,7 +41,7 @@
         </style>
     </head>
     <body>
-        <a   href="../proyectos/cuerpoPrincipal.html">
+        <a   href="../cuerpo/cuerpoPrincipal.html">
             Ir Hacia Pagina Principal
        </a>
         <h1>BDCHP BLOGS</h1>
