--- a/proyectos/recetas.html
+++ b/proyectos/recetas.html
@@ -35,7 +35,7 @@
         </style>
     </head>
     <body>
-        <a   href="../proyectos/cuerpoPrincipal.html">
+        <a   href="../cuerpo/cuerpoPrincipal.html">
             Ir Hacia Pagina Principal
        </a>
         <h1>LIBRO DE RECETAS PARA AMANTES A LA COCINA</h1>
