proyecto carrito y envio de email

--- a/cuerpo/cuerpoPrincipal.html
+++ b/cuerpo/cuerpoPrincipal.html
@@ -63,6 +63,33 @@
             </ul>
         </article>
         </div>
+
+        <div class="row">
+            <article class="proyecto">
+                <img src="../imagenes/imge1.jpg" alt="" class="proyecto_imagen">
+                <a href="../ProyectoCarrito/index.html" class="proyecto_titulo">Proyecto Carrito</a>
+                <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
+                <ul class="habilidades">
+                    <li class="habilidad--proyecto">HTML 5</li>
+                    <li class="habilidad--proyecto">CSS 3</li>
+                    <li class="habilidad--proyecto">JS</li>
+                    <li class="habilidad--proyecto">Angular</li>
+                </ul>
+            </article>
+    
+    
+            <article class="proyecto">
+                <img src="../imagenes/imge1.jpg" alt="" class="proyecto_imagen">
+                <a href="../proyectoEmail/index.html" class="proyecto_titulo">Proyecto Envio Email</a>
+                <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
+                <ul class="habilidades">
+                    <li class="habilidad--proyecto">HTML 5</li>
+                    <li class="habilidad--proyecto">CSS 3</li>
+                    <li class="habilidad--proyecto">JS</li>
+                    <li class="habilidad--proyecto">Angular</li>
+                </ul>
+            </article>
+            </div>
     </section>
 </body>
 </html>
