--- a/cuerpo/cuerpoPrincipal.html
+++ b/cuerpo/cuerpoPrincipal.html
@@ -234,6 +234,31 @@
                                         </ul>
                                     </article>
                                     <article class="proyecto">
+                                        <img src="../imagenes/buscadorimagenes.jpg" alt="" class="proyecto_imagen">
+                                        <a href="../ProyectoBuscadorDeImagenes/index.html" class="proyecto_titulo">Buscador de Imagenes</a>
+                                        <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
+                                        <ul class="habilidades">
+                                            <li class="habilidad--proyecto">HTML 5</li>
+                                            <li class="habilidad--proyecto">CSS 3</li>
+                                            <li class="habilidad--proyecto">JS</li>
+                                            <li class="habilidad--proyecto">Angular</li>
+                                        </ul>
+                                    </article>
+                                    </div>
+                                    <div class="row">
+                                
+                                    <article class="proyecto">
+                                        <img src="../imagenes/criptomoneda.jpg" alt="" class="proyecto_imagen">
+                                        <a href="../ProyectoCriptoMonedas/index.html" class="proyecto_titulo">Valor Criptomoneda</a>
+                                        <p class="proyecto_descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nemo, minima error accusantium alias labore possimus, obcaecati culpa fugiat delectus, veritatis consectetur! Fuga ipsum exercitationem libero? Id eius itaque fugiat!</p>
+                                        <ul class="habilidades">
+                                            <li class="habilidad--proyecto">HTML 5</li>
+                                            <li class="habilidad--proyecto">CSS 3</li>
+                                            <li class="habilidad--proyecto">JS</li>
+                                            <li class="habilidad--proyecto">Angular</li>
+                                        </ul>
+                                    </article>
+                                    <article class="proyecto">
                                     </article>
                                     </div>
     </section>
